# closefriends

./: README.ipynb  README.md  pyproject.toml  setup.py
closefriends/: __init__.py  setup.py
closefriends/src/: closefriends.F90  sort.cpp
perfstats/: plotperf.ipynb  square_constantpairs.py  times_cf_square.csv  times_sp_square.csv
src/: closefriends.cpp
tests/: ancillary.py  test_api.py  test_correctness.py
