[tool.poetry]
name = "closefriends"
version = "0.1.0"
description = "A package to find point pairs in a point cloud within a fixed distance using a Cell lists data-structure."
authors = ["Edward Yang"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
scipy = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
